--- a/style.css
+++ b/style.css
@@ -43,3 +43,13 @@
   align-items: center;
   padding: 0, 20px;
 }
+
+.navigation .menu-toggle:before {
+  content: '';
+  position: absolute;
+  width: 30px;
+  height: 2px;
+  background: #333;
+  transform: translateY(-8px);
+  transition: 0.5s;
+}
