--- a/style.css
+++ b/style.css
@@ -93,3 +93,51 @@
   cursor: pointer;
   transition: 0.5s;
 }
+
+.navigation ul li.active {
+  transform: translate(30px);
+}
+
+.navigation.open ul li.active {
+  transform: translate(10px);
+}
+
+.navigation ul li a {
+  text-decoration: none;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  text-align: center;
+  align-items: center;
+}
+
+.navigation ul li a .icon {
+  position: relative;
+  display: block;
+  min-width: 55px;
+  height: 55px;
+  line-height: 60px;
+  color: #222;
+  border-radius: 10px;
+  font-size: 1.75em;
+  transition: 0.5s;
+}
+
+.navigation ul li.active a .icon {
+  color: #fff;
+  background: var(--color);
+}
+
+.navigation ul li a .icon::before {
+  content: '';
+  position: absolute;
+  top: 10px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background: var(--color);
+  filter: blur(8px);
+  opacity: 0;
+  transition: 0.5s;
+}
