--- a/style.css
+++ b/style.css
@@ -141,3 +141,28 @@
   opacity: 0;
   transition: 0.5s;
 }
+
+.navigation ul li.active a .icon::before {
+  opacity: 0.5;
+}
+
+.navigation ul li a .text {
+  position: relative;
+  padding: 0 15px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  color: #333;
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.5s;
+}
+
+.navigation.open ul li a .text {
+  opacity: 1;
+  visibility: hidden;
+}
+
+.navigation ul li.active a .text {
+  color: var(--color);
+}
